# proofpay

./: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
examples/: agent.rs
src/: config.rs  lib.rs  main.rs  proof.rs  server.rs  x402.rs
