[package]
name = "proofpay"
version = "0.1.0"
edition = "2021"
description = "ZK-gated payments on Stellar — prove access rights with zero-knowledge proofs, pay via x402"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
