[package]
name = "proofpay"
version = "0.1.0"
edition = "2021"
description = "ZK-gated x402 access for autonomous agents on Stellar"
license = "MIT"
repository = "https://github.com/gabrielrondon/proofpay"

[lib]
name = "proofpay"
path = "src/lib.rs"

[[bin]]
name = "proofpay"
path = "src/main.rs"

[[example]]
name = "agent"
path = "examples/agent.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
